rust-runtime-kafka/kafka/kr-kafka-ffi/include/kr_kafka.h

#define KR_OK 0
typedef struct kr_producer kr_producer;
typedef struct {const uint8_t *ptr;uint32_t len;} kr_span;
typedef struct {uint32_t struct_size;kr_span host;uint32_t port;} kr_broker;
typedef struct {
 uint32_t struct_size;
 uint64_t delivery_timeout_ns;
 uint64_t request_timeout_ns;
 uint64_t linger_max_ns;
 uint64_t metadata_max_age_ns;
 uint64_t topic_resolve_timeout_ns;
 uint64_t retry_backoff_min_ns;
 uint64_t retry_backoff_max_ns;
 uint64_t input_bytes;
 uint64_t compressed_bytes;
 uint64_t control_reserve_bytes;
 uint64_t codec_workspace_bytes;
 uint32_t max_in_flight_per_connection;
 uint32_t lanes;
 uint32_t codec_contexts;
 uint32_t max_attempts;
 uint32_t request_max_partitions;
 uint32_t brokers_max;
 uint32_t worker_jobs;
 uint32_t connection_wire_window_bytes;
 uint32_t batch_target_bytes;
 uint32_t batch_hard_bytes;
 uint32_t request_target_bytes;
 uint32_t request_hard_bytes;
 uint32_t record_descriptors;
 uint32_t staging_bytes_per_connection;
 uint32_t rx_bytes_per_connection;
 uint32_t delivery_event_capacity;
 uint32_t release_event_capacity;
 uint32_t mailbox_capacity;
 uint32_t max_open_topics;
 uint32_t pending_records_per_topic;
 uint32_t max_live_leases;
 uint32_t max_batches;
 uint32_t codec_window_log;
 uint32_t output_chunk_bytes;
 uint32_t progressive_threshold;
 uint32_t tls_plaintext_bytes;
 uint32_t tls_ciphertext_bytes;
 uint32_t max_header_count;
 uint32_t max_submissions_per_poll;
 uint32_t max_submission_records;
 uint32_t max_completions_per_poll;
 uint32_t sim_encode_bytes_per_poll;
 uint32_t target_poll_ms;
 uint32_t coalesce_below_bytes;
 uint32_t linger_skip_below_rate;
 uint32_t unkeyed_policy;
 uint32_t unkeyed_run_bytes;
 uint32_t partitioner;
 uint32_t compression;
 uint32_t compression_level;
 uint32_t transport;
 uint32_t security;
 uint32_t sasl_mechanism;
 uint32_t tls_system_roots;
 kr_span client_id;
 const kr_broker * bootstrap;
 uint32_t bootstrap_count;
 const kr_span * tls_roots;
 uint32_t tls_root_count;
 kr_span tls_server_name;
 kr_span username;
 kr_span password;
 /* 0 = estimated wire bytes including batch header; 1 = legacy raw bytes. */
 uint32_t batch_target_mode;
 /* 0 = sealed (default), 1 = single partition, 2 = broker ready. */
 uint32_t request_batching_policy;
 /* Must be zero; ABI 4 has a distinct configuration size. */
 uint32_t reserved_request_policy;
} kr_producer_config;
/* Initialize defaults into an output of exactly sizeof(kr_producer_config).
 * Empty bootstrap selects localhost:9092. NULL client_id selects kr-kafka.
 * transport:0=uring,1=readiness,2=Auto (uring-or-fail until native gate).
 * security:0=plaintext,1=TLS,2=SASL+TLS; sasl:0=PLAIN,1=SHA256,2=SHA512.
 * compression:0=none,1=zstd; partitioner:0=builtin,1=external partition hints.
 * unkeyed_policy:0=uniform bytes,1=adaptive. All time fields use nanoseconds.
 * Credentials/config spans are copied before create returns. */
uint32_t kr_abi_version(void);
int32_t kr_producer_config_init(kr_producer_config*,uint32_t struct_size);
int32_t kr_producer_create(const kr_producer_config*,kr_producer**);
int32_t kr_topic_open(kr_producer*,const char*,uint32_t,uint32_t*);
int32_t kr_topic_id(kr_producer*,uint32_t,uint8_t id_out[16]);
int32_t kr_topic_close(kr_producer*,uint32_t);
/* Owner terminal status is published only after terminal record/fence events.
 * ABORTED emits no CLOSED event. Provider retirement may still require destroy.
 * These functions, snapshot reads/release and event draining remain usable after
 * owner failure. All outputs are caller-owned; initialize every struct_size.
 * Snapshot handles never repeat. At most max_open_topics snapshots may be held.
 * Acquiring missing/resolving metadata returns NOT_READY without a handle.
 * A snapshot remains immutable across refresh, topic close and name reuse.
 * Release once; stale/released handles return INVALID. Destroy releases all.
 * Row pages cap at 1024; string/node pages cap at 65536 bytes / 1024 IDs.
 * start equal to count returns an empty page; start beyond count is INVALID.
 * String bytes are UTF-8 without a terminator. Rack may be absent.
 * Refresh coalesces until the owner consumes it; STALE invalidates the cached
 * metadata until a successful refresh. Held snapshots remain readable. */
int32_t kr_owner_status(kr_producer*,uint32_t *status);