rust-runtime-kafka/kafka/kr-kafka-java/src/main/java/io/krkafka/ffi/kr_kafka_h.java

// Generated by jextract

package io.krkafka.ffi;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class kr_kafka_h extends kr_kafka_h$shared {

    kr_kafka_h() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int KR_OK = (int)0L;
    /**
     * {@snippet lang=c :
     * #define KR_OK 0
     * }
     */
    public static int KR_OK() {
        return KR_OK;
    }

    private static class kr_abi_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_abi_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t kr_abi_version()
     * }
     */
    public static FunctionDescriptor kr_abi_version$descriptor() {
        return kr_abi_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t kr_abi_version()
     * }
     */
    public static MethodHandle kr_abi_version$handle() {
        return kr_abi_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t kr_abi_version()
     * }
     */
    public static MemorySegment kr_abi_version$address() {
        return kr_abi_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t kr_abi_version()
     * }
     */
    public static int kr_abi_version() {
        var mh$ = kr_abi_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_abi_version");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_producer_config_init {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_producer_config_init");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_producer_config_init(kr_producer_config *, uint32_t struct_size)
     * }
     */
    public static FunctionDescriptor kr_producer_config_init$descriptor() {
        return kr_producer_config_init.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_producer_config_init(kr_producer_config *, uint32_t struct_size)
     * }
     */
    public static MethodHandle kr_producer_config_init$handle() {
        return kr_producer_config_init.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_producer_config_init(kr_producer_config *, uint32_t struct_size)
     * }
     */
    public static MemorySegment kr_producer_config_init$address() {
        return kr_producer_config_init.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_producer_config_init(kr_producer_config *, uint32_t struct_size)
     * }
     */
    public static int kr_producer_config_init(MemorySegment x0, int struct_size) {
        var mh$ = kr_producer_config_init.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_producer_config_init", x0, struct_size);
            }
            return (int)mh$.invokeExact(x0, struct_size);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_producer_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_producer_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_producer_create(const kr_producer_config *, kr_producer **)
     * }
     */
    public static FunctionDescriptor kr_producer_create$descriptor() {
        return kr_producer_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_producer_create(const kr_producer_config *, kr_producer **)
     * }
     */
    public static MethodHandle kr_producer_create$handle() {
        return kr_producer_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_producer_create(const kr_producer_config *, kr_producer **)
     * }
     */
    public static MemorySegment kr_producer_create$address() {
        return kr_producer_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_producer_create(const kr_producer_config *, kr_producer **)
     * }
     */
    public static int kr_producer_create(MemorySegment x0, MemorySegment x1) {
        var mh$ = kr_producer_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_producer_create", x0, x1);
            }
            return (int)mh$.invokeExact(x0, x1);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_topic_open {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_topic_open");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_topic_open(kr_producer *, const char *, uint32_t, uint32_t *)
     * }
     */
    public static FunctionDescriptor kr_topic_open$descriptor() {
        return kr_topic_open.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_topic_open(kr_producer *, const char *, uint32_t, uint32_t *)
     * }
     */
    public static MethodHandle kr_topic_open$handle() {
        return kr_topic_open.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_topic_open(kr_producer *, const char *, uint32_t, uint32_t *)
     * }
     */
    public static MemorySegment kr_topic_open$address() {
        return kr_topic_open.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_topic_open(kr_producer *, const char *, uint32_t, uint32_t *)
     * }
     */
    public static int kr_topic_open(MemorySegment x0, MemorySegment x1, int x2, MemorySegment x3) {
        var mh$ = kr_topic_open.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_topic_open", x0, x1, x2, x3);
            }
            return (int)mh$.invokeExact(x0, x1, x2, x3);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_topic_id {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_topic_id");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_topic_id(kr_producer *, uint32_t, uint8_t id_out[16])
     * }
     */
    public static FunctionDescriptor kr_topic_id$descriptor() {
        return kr_topic_id.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_topic_id(kr_producer *, uint32_t, uint8_t id_out[16])
     * }
     */
    public static MethodHandle kr_topic_id$handle() {
        return kr_topic_id.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_topic_id(kr_producer *, uint32_t, uint8_t id_out[16])
     * }
     */
    public static MemorySegment kr_topic_id$address() {
        return kr_topic_id.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_topic_id(kr_producer *, uint32_t, uint8_t id_out[16])
     * }
     */
    public static int kr_topic_id(MemorySegment x0, int x1, MemorySegment id_out) {
        var mh$ = kr_topic_id.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_topic_id", x0, x1, id_out);
            }
            return (int)mh$.invokeExact(x0, x1, id_out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_topic_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_topic_close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_topic_close(kr_producer *, uint32_t)
     * }
     */
    public static FunctionDescriptor kr_topic_close$descriptor() {
        return kr_topic_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_topic_close(kr_producer *, uint32_t)
     * }
     */
    public static MethodHandle kr_topic_close$handle() {
        return kr_topic_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_topic_close(kr_producer *, uint32_t)
     * }
     */
    public static MemorySegment kr_topic_close$address() {
        return kr_topic_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_topic_close(kr_producer *, uint32_t)
     * }
     */
    public static int kr_topic_close(MemorySegment x0, int x1) {
        var mh$ = kr_topic_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_topic_close", x0, x1);
            }
            return (int)mh$.invokeExact(x0, x1);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_owner_status {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_owner_status");
